--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ layout: default
                 <div class="timeline">
                     <div class="timeline-item">
                         <div class="timeline-content">
-                            <h3>Lead Guidewire Developer</h3>
+                            <h3>Senior Consultant</h3>
                             <h4>EY Canada — Toronto, ON</h4>
                             <p class="timeline-date">Apr 2024 – Present</p>
                             <ul>
