Updated logo and phone number.

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ layout: default
                     
                     <a href="https://education.guidewire.com/" target="_blank" class="certification-item">
                         <div class="cert-logo">
-                            <img src="assets/images/GW-certs/Integration Ace Logo.png" alt="Guidewire ACE Integration Certification" class="cert-img">
+                            <img src="assets/images/GW-certs/ConfigDeveloper-Ace-PC-Logo.png" alt="Guidewire ACE Integration Certification" class="cert-img">
                         </div>
                         <div class="cert-details">
                             <h3>Guidewire Certified ACE - PolicyCenter</h3>
@@ -343,7 +343,7 @@ layout: default
                             </div>
                             <div class="contact-item">
                                 <i class="fas fa-phone"></i>
-                                <a href="tel:+14378889999">+1 437-888-9999</a>
+                                <a href="tel:+14378336346">+1 437-833-6346</a>
                             </div>
                             <div class="contact-item">
                                 <i class="fab fa-linkedin"></i>
